// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav - TabLink renders as a component 1`] = `
.c0 {
  position: relative;
  padding: 0;
  padding-bottom: 14px;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.3;
  font-family: inherit;
  background-color: transparent;
  color: #8697A2;
  -webkit-transition: color 0.2s ease;
  transition: color 0.2s ease;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:after {
  content: "";
  position: absolute;
  height: 2px;
  width: 100%;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0 auto;
  background-color: #0CD664;
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: -webkit-transform 0.2s ease;
  -webkit-transition: transform 0.2s ease;
  transition: transform 0.2s ease;
}

.c0:hover,
.c0:focus,
.c0:active,
.c0.active,
.c0[aria-current=page] {
  color: #FFF;
  cursor: pointer;
}

.c0:hover:after,
.c0:focus:after,
.c0:active:after,
.c0.active:after,
.c0[aria-current=page]:after {
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
}

<a
  className="c0"
  id="test-link"
>
  Sample link
</a>
`;

exports[`Nav - TabLink renders as active 1`] = `
.c0 {
  position: relative;
  padding: 0;
  padding-bottom: 14px;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.3;
  font-family: inherit;
  background-color: transparent;
  color: #8697A2;
  -webkit-transition: color 0.2s ease;
  transition: color 0.2s ease;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:after {
  content: "";
  position: absolute;
  height: 2px;
  width: 100%;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0 auto;
  background-color: #0CD664;
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: -webkit-transform 0.2s ease;
  -webkit-transition: transform 0.2s ease;
  transition: transform 0.2s ease;
}

.c0:hover,
.c0:focus,
.c0:active,
.c0.active,
.c0[aria-current=page] {
  color: #FFF;
  cursor: pointer;
}

.c0:hover:after,
.c0:focus:after,
.c0:active:after,
.c0.active:after,
.c0[aria-current=page]:after {
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
}

<a
  className="c0 active"
>
  Sample link
</a>
`;

exports[`Nav - TabLink renders as active 2`] = `
.c0 {
  position: relative;
  padding: 0;
  padding-bottom: 14px;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.3;
  font-family: inherit;
  background-color: transparent;
  color: #8697A2;
  -webkit-transition: color 0.2s ease;
  transition: color 0.2s ease;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:after {
  content: "";
  position: absolute;
  height: 2px;
  width: 100%;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0 auto;
  background-color: #0CD664;
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: -webkit-transform 0.2s ease;
  -webkit-transition: transform 0.2s ease;
  transition: transform 0.2s ease;
}

.c0:hover,
.c0:focus,
.c0:active,
.c0.active,
.c0[aria-current=page] {
  color: #FFF;
  cursor: pointer;
}

.c0:hover:after,
.c0:focus:after,
.c0:active:after,
.c0.active:after,
.c0[aria-current=page]:after {
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
}

<a
  className="c0"
  href="#"
>
  Sample link
</a>
`;

exports[`Nav - TabLink renders as an anchor by default 1`] = `
.c0 {
  position: relative;
  padding: 0;
  padding-bottom: 14px;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.3;
  font-family: inherit;
  background-color: transparent;
  color: #8697A2;
  -webkit-transition: color 0.2s ease;
  transition: color 0.2s ease;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:after {
  content: "";
  position: absolute;
  height: 2px;
  width: 100%;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0 auto;
  background-color: #0CD664;
  -webkit-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: -webkit-transform 0.2s ease;
  -webkit-transition: transform 0.2s ease;
  transition: transform 0.2s ease;
}

.c0:hover,
.c0:focus,
.c0:active,
.c0.active,
.c0[aria-current=page] {
  color: #FFF;
  cursor: pointer;
}

.c0:hover:after,
.c0:focus:after,
.c0:active:after,
.c0.active:after,
.c0[aria-current=page]:after {
  -webkit-transform: scaleX(1);
  -ms-transform: scaleX(1);
  transform: scaleX(1);
}

<a
  className="c0"
  href="#"
>
  Sample link
</a>
`;
